# zone-guard

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: alerts.yaml  cameras.yaml
dashboard/: streamlit_app.py
scripts/: generate_zone.py  test_detection_visual.py  test_tracking_visual.py  test_webcam.py  test_zone_visual.py
src/zone_guard/: config.py  main.py
src/zone_guard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zone_guard/alerts/: dispatcher.py
src/zone_guard/api/: app.py  schemas.py
src/zone_guard/api/routes/: auth.py  events.py  health.py  stream.py
src/zone_guard/db/: database.py  models.py
src/zone_guard/detection/: detector.py
src/zone_guard/events/: event_manager.py
src/zone_guard/ingestion/: camera.py
src/zone_guard/tracking/: byte_tracker.py
src/zone_guard/zones/: state_machine.py  zone_checker.py
tests/unit/: test_camera.py  test_detector.py  test_zones.py
